# spatial-omics

./: .gitignore  .zenodo.json  404.html  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  DEPLOY.md  LICENSE  MERGE_MAP.md  METHODS_ROADMAP.md  README.md  RELEASE.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml
ECOSYSTEM_PLAN/: index.html
api/: index.html
conda-recipe/: meta.yaml
docs/: ECOSYSTEM_PLAN.md  api.md  index.md  installation.md
docs/tutorials/: artifact-guards.md  from-fastq.md  getting-started.md  multimodal.md  reproduce-nature2022.md
examples/: artifact_guards.py  fetch_public_data.sh  quickstart.py  run_real_data.py
installation/: index.html
scripts_legacy/: README.md
scripts_legacy/stage3_cna_clone/: README_stage3.md  compare_samples_cna.py  compute_bin_gc.py  fig1f_aggregate_cna.py  pick_normal_spots.py  run_stage3.sh  stage3_bulk_cna.py  stage3_per_spot_cnv.py  stage3_spatial_clones.py  stage3_spatial_heterogeneity.py
scripts_legacy/stage4_rna_integration/: PLAN.md
scripts_legacy/stage5_wsi_registration/: PLAN.md  README_stage5.md  stage5_purity_he.py  stage5_register.py
scripts_legacy/stage6_control_compare/: PLAN.md
search/: search_index.json
src/spatial_omics/: __init__.py  _bins.py  _constants.py  io.py
tests/: test_cohort.py  test_golden.py  test_integer_cn.py  test_pipeline.py  test_pp_he.py  test_rigor.py  test_segment.py
tutorials/artifact-guards/: index.html
tutorials/from-fastq/: index.html
tutorials/getting-started/: index.html
tutorials/multimodal/: index.html
(+19 files in other folders)
