[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spatial-omics"
version = "0.1.0"
description = "Spatial copy-number & clone analysis for sparse spatial DNA-seq (DBiT / slide-DNA-seq)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Hao Xu" }, { name = "Demeng Chen" }]
keywords = ["spatial", "DNA-seq", "copy-number", "CNA", "single-cell", "genomics", "DBiT", "slide-DNA-seq"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "scipy>=1.7",
    "scikit-learn>=1.0",
    "anndata>=0.8",
    "matplotlib>=3.4",
]

[project.optional-dependencies]
viz = ["squidpy>=1.2"]
he = ["opencv-python>=4.5", "scikit-image>=0.19"]
dev = ["pytest>=7", "pytest-cov", "ruff", "build"]
docs = ["mkdocs-material", "mkdocs-jupyter", "mkdocstrings[python]"]

[project.urls]
Homepage = "https://github.com/chxhstatis/spatial-omics"
Documentation = "https://chxhstatis.github.io/spatial-omics"
Issues = "https://github.com/chxhstatis/spatial-omics/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/spatial_omics"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
